--- a/form-style.css
+++ b/form-style.css
@@ -17,5 +17,5 @@ font-family:"Times New Roman";
 border-style:groove;
 border-color:white;
 border-width:50px;
-  margin:0 auto;
+  margin:40px 40px 60px;
 }
